Ilham2 (#19)
* add api-docs

* new

* fix bug

* rename migrate

* new

* rename migration

* fix bug

* fix bug

* update

* add doc_api

* add api airport

* add API login with google
